@@ -4,6 +4,14 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- When switching comments on for an object, catalog its possibly
+  already existing comments, when needed.
+  [maurits]
+
+- On the details page, also show number of actual comments, instead of
+  only the comments in the catalog.
+  [maurits]
+
 - Added @@find-catalog-comments page (linked from the overview page)
   that finds and catalogs all comments for objects that currently
   allow commenting.  This is needed after a clear and rebuild of the
